--- a/matchinfo.html
+++ b/matchinfo.html
@@ -179,6 +179,39 @@
 #player-list ul li:last-child {
   border-bottom: none;
 }
+
+
+ #loader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+  }
+
+  .spinner {
+    border: 4px solid rgba(255, 255, 255, 0.3);
+    border-top: 4px solid #fff;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 0.8s linear infinite;
+  }
+
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
 </style>
 </head>
 <body class="sub_page">
@@ -286,6 +319,9 @@
 </section>
 
 
+<div id="loader" style="display: none;">
+  <div class="spinner"></div>
+</div>
   
 
   <!-- end info section -->
@@ -416,7 +452,24 @@ function renderCards(data) {
         </label>
       </div>
     `).join('');
-
+       const bettingDropdownHtml = `
+      <div class="mt-3">
+        <label for="betting-${questionId}" class="form-label">Betting Amount:</label>
+        <select class="form-control" id="betting-${questionId}" name="betting-${questionId}" required>
+          <option value="" selected>Select Amount</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+          <option value="30">30</option>
+          <option value="40">40</option>
+          <option value="50">50</option>
+          <option value="60">60</option>
+          <option value="70">70</option>
+          <option value="80">80</option>
+          <option value="90">90</option>
+          <option value="100">100</option>
+        </select>
+      </div>
+    `;
     // Question HTML with dropdown and submit button
     const questionHtml = `
       <div class="mb-4 question-block">
@@ -424,8 +477,10 @@ function renderCards(data) {
         <div class="options">
           ${optionsHtml}
         </div>
+
+        ${bettingDropdownHtml}
         <div class="mt-2">
-          <button class="btn btn-primary submit-question-button" data-question-id="${questionId}">Submit</button>
+          <button class="btn btn-primary submit-question-button" id="submitBTN_${questionId}" data-question-id="${questionId}">Submit</button>
         </div>
       </div>
     `;
@@ -452,17 +507,17 @@ function handleQuestionSubmit(event) {
   const selectedOption = document.querySelector(`input[name="question-${questionId}"]:checked`);
 
   // Find the betting amount for the question
- // const bettingAmount = document.getElementById(`betting-${questionId}`).value;
+  const bettingAmount = document.getElementById(`betting-${questionId}`).value;
 
   if (!selectedOption) {
     alert(`Please select an answer for Question ${questionId} before submitting.`);
     return;
   }
 
- /* if (!bettingAmount) {
+  if (!bettingAmount) {
     alert(`Please select a betting amount for Question ${questionId} before submitting.`);
     return;
-  }*/
+  }
 
   const answer = selectedOption.nextElementSibling.textContent.trim(); // Get the text of the selected option
 
@@ -470,6 +525,7 @@ function handleQuestionSubmit(event) {
 
   console.log("Token", accessToken);
  
+  showLoader();
   const url="https://test.api.itisiya.com:8443/b2winai/bet/bets/place_contest_question_bet";
   $.ajax({
         url: url,
@@ -483,22 +539,23 @@ function handleQuestionSubmit(event) {
   contest_questions_id: questionId,
   question: questionText,
   answer: `["${answer}"]`,
-  bet_point: 10
+  bet_point: parseInt(bettingAmount)
         }),
         success: function (response) {
             console.log("response:", response);
              hideLoader();
-    if (response.statuscode === 200) {    
-     alert(response.message);          
-            } else {
-                console.error("failed with status:", response.statuscode, response.message);
-                alert("Failed: " + response.message);
-            }
+          if (response.statuscode === 200) {    
+           alert(response.message);  
+           $("#submitBTN_"+questionId).prop("disabled", true);
+          } else {
+              console.error("failed with status:", response.statuscode, response.message);
+              alert(response.message);
+          }
         },
         error: function (xhr, status, error) {
            hideLoader();
             console.error("Failed:", xhr.responseText || error);
-            alert("Failed:", xhr.responseText || error);
+            alert( xhr.responseText || error);
         }
     });
  
@@ -524,7 +581,7 @@ function getMatchBettingQuestion() {
         }
             } else {
                 console.error("failed with status:", response.statuscode, response.message);
-                alert("Failed: " + response.message);
+                alert(response.message);
             }
     // Process response
   }).catch(error => {
@@ -764,12 +821,12 @@ function getPlayers() {
         localStorage.setItem("playersData_"+contentId, JSON.stringify(response.data));
       } else {
         console.error("Failed with status:", response.statuscode, response.message);
-        alert("Failed: " + response.message);
+        alert(response.message);
       }
     },
     error: function (xhr, status, error) {
       hideLoader();
-      alert("Failed to upload image: " + (xhr.responseText || error));
+      alert((xhr.responseText || error));
     }
   });
 }
