--- a/tournamentinfo.html
+++ b/tournamentinfo.html
@@ -616,7 +616,24 @@ function renderCards(data) {
         </label>
       </div>
     `).join('');
-
+ const bettingDropdownHtml = `
+      <div class="mt-3">
+        <label for="betting-${questionId}" class="form-label">Betting Amount:</label>
+        <select class="form-control" id="betting-${questionId}" name="betting-${questionId}" required>
+          <option value="" selected>Select Amount</option>
+          <option value="10">10</option>
+          <option value="20">20</option>
+          <option value="30">30</option>
+          <option value="40">40</option>
+          <option value="50">50</option>
+          <option value="60">60</option>
+          <option value="70">70</option>
+          <option value="80">80</option>
+          <option value="90">90</option>
+          <option value="100">100</option>
+        </select>
+      </div>
+    `;
     // Question HTML with dropdown and submit button
     const questionHtml = `
       <div class="mb-4 question-block">
@@ -624,6 +641,8 @@ function renderCards(data) {
         <div class="options">
           ${optionsHtml}
         </div>
+        
+        ${bettingDropdownHtml}
         <div class=" mt-2">
           <button class="btn btn-primary submit-question-button" data-question-id="${questionId}">Submit</button>
         </div>
@@ -656,17 +675,17 @@ function handleQuestionSubmit(event) {
   const selectedOption = document.querySelector(`input[name="question-${questionId}"]:checked`);
 
   // Find the betting amount for the question
- // const bettingAmount = document.getElementById(`betting-${questionId}`).value;
+  const bettingAmount = document.getElementById(`betting-${questionId}`).value;
 
   if (!selectedOption) {
     alert(`Please select an answer for Question ${questionId} before submitting.`);
     return;
   }
 
- /* if (!bettingAmount) {
+  if (!bettingAmount) {
     alert(`Please select a betting amount for Question ${questionId} before submitting.`);
     return;
-  }*/
+  }
 
   const answer = selectedOption.nextElementSibling.textContent.trim(); // Get the text of the selected option
 
@@ -687,7 +706,7 @@ function handleQuestionSubmit(event) {
   contest_questions_id: questionId,
   question: questionText,
   answer: `["${answer}"]`,
-  bet_point: 10
+  bet_point:  parseInt(bettingAmount)
         }),
         success: function (response) {
             console.log("response:", response);
