--- a/dashboard.html
+++ b/dashboard.html
@@ -65,13 +65,12 @@
 }
 
 .card-img {
-  flex: 0 0 100px;
-  margin-right: 15px;
+  text-align: center;
 }
 
 .card-img img {
-  width: 50px;
-  height: 50px;
+  width: 70px;
+  height: 70px;
   object-fit: cover;
   border-radius: 8px;
 }
@@ -275,32 +274,6 @@
     }
 });
 
-function isTokenExpired(token) {
-    try {
-        // Decode the token
-        const payload = JSON.parse(atob(token.split(".")[1].replace(/-/g, "+").replace(/_/g, "/")));
-
-        // Get the current time in seconds
-        const currentTime = Math.floor(Date.now() / 1000);
-
-        // Check if the token is expired
-        return payload.exp < currentTime; // true if expired, false otherwise
-    } catch (error) {
-        console.error("Invalid JWT token:", error.message);
-        return true; // Assume invalid tokens are expired
-    }
-}
-
-
-function logout() {
-  localStorage.removeItem("b2Win_access_token");
-    localStorage.removeItem("b2Win_refresh_token");
-    localStorage.removeItem("b2Win_uid");
-    localStorage.removeItem("b2Win_email");
-    localStorage.removeItem("b2Win_referralCode");
-
-    window.location.href = "index.html";
-}
 
 
 
@@ -310,7 +283,7 @@ function renderCards(data) {
 
   data.forEach(item => {
     // Replace these values with actual keys from your API response
-    const imageUrl = item.image_url || "images/s1.png"; // Fallback image
+    const imageUrl = item.image_url || "images/team_a.jpg"; // Fallback image
     const title = item.name || "Untitled Contest";
     const dateRange = `${formatDate(item.start_time) || "N/A"} to ${formatDate(item.end_time) || "N/A"}`;
     const location = item.description || "Unknown Location";
@@ -428,6 +401,32 @@ if (!refreshToken) {
 
 
 
+function isTokenExpired(token) {
+    try {
+        // Decode the token
+        const payload = JSON.parse(atob(token.split(".")[1].replace(/-/g, "+").replace(/_/g, "/")));
+
+        // Get the current time in seconds
+        const currentTime = Math.floor(Date.now() / 1000);
+
+        // Check if the token is expired
+        return payload.exp < currentTime; // true if expired, false otherwise
+    } catch (error) {
+        console.error("Invalid JWT token:", error.message);
+        return true; // Assume invalid tokens are expired
+    }
+}
+
+
+function logout() {
+  localStorage.removeItem("b2Win_access_token");
+    localStorage.removeItem("b2Win_refresh_token");
+    localStorage.removeItem("b2Win_uid");
+    localStorage.removeItem("b2Win_email");
+    localStorage.removeItem("b2Win_referralCode");
+
+    window.location.href = "index.html";
+}
 
 
 
