--- a/tournamentResult.html
+++ b/tournamentResult.html
@@ -354,7 +354,7 @@
   <section class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By b2win.ai
+        &copy; <span id="displayYear"></span> All Rights Reserved By B2WIN.AI
       </p>
     </div>
   </section>
@@ -453,6 +453,7 @@ $("#login").show("slow");
   var phone="";
   var address="";
   var contentId
+  
   document.addEventListener("DOMContentLoaded", function () {
     // Retrieve the access token and refresh token from local storage
     const accessToken = localStorage.getItem("b2Win_access_token") || "";
@@ -463,7 +464,8 @@ $("#login").show("slow");
         console.warn("Tokens are missing. Redirecting to login...");
         window.location.href = "index.html"; // Redirect to login page
     } else {
-      const queryString = window.location.search;
+        console.log("Tokens exist. Proceeding to fetch contests...");
+        const queryString = window.location.search;
 
 // Parse the query string
 const urlParams = new URLSearchParams(queryString);
@@ -471,38 +473,11 @@ const urlParams = new URLSearchParams(queryString);
 // Get the content_id from the URL
 const content_id = urlParams.get('content_id');
 contentId=content_id;
-        console.log("Tokens exist. Proceeding to fetch contests...");
-        
-    }
+
     getGroupedTournament();
+    }
 });
 
-function isTokenExpired(token) {
-    try {
-        // Decode the token
-        const payload = JSON.parse(atob(token.split(".")[1].replace(/-/g, "+").replace(/_/g, "/")));
-
-        // Get the current time in seconds
-        const currentTime = Math.floor(Date.now() / 1000);
-
-        // Check if the token is expired
-        return payload.exp < currentTime; // true if expired, false otherwise
-    } catch (error) {
-        console.error("Invalid JWT token:", error.message);
-        return true; // Assume invalid tokens are expired
-    }
-}
-
-
-function logout() {
-  localStorage.removeItem("b2Win_access_token");
-    localStorage.removeItem("b2Win_refresh_token");
-    localStorage.removeItem("b2Win_uid");
-    localStorage.removeItem("b2Win_email");
-    localStorage.removeItem("b2Win_referralCode");
-
-    window.location.href = "index.html";
-}
 
 
 
@@ -716,7 +691,32 @@ if (!refreshToken) {
 
 
 
+function isTokenExpired(token) {
+    try {
+        // Decode the token
+        const payload = JSON.parse(atob(token.split(".")[1].replace(/-/g, "+").replace(/_/g, "/")));
 
+        // Get the current time in seconds
+        const currentTime = Math.floor(Date.now() / 1000);
+
+        // Check if the token is expired
+        return payload.exp < currentTime; // true if expired, false otherwise
+    } catch (error) {
+        console.error("Invalid JWT token:", error.message);
+        return true; // Assume invalid tokens are expired
+    }
+}
+
+
+function logout() {
+  localStorage.removeItem("b2Win_access_token");
+    localStorage.removeItem("b2Win_refresh_token");
+    localStorage.removeItem("b2Win_uid");
+    localStorage.removeItem("b2Win_email");
+    localStorage.removeItem("b2Win_referralCode");
+
+    window.location.href = "index.html";
+}
 
 
 function showLoader() {
