--- a/tournamentinfo.html
+++ b/tournamentinfo.html
@@ -232,13 +232,13 @@
 </style>
 </head>
 
-<body>
+<body class="sub_page">
 
-  <div class="hero_area">
+   <div class="hero_area">
 
     <div class="hero_bg_box">
       <div class="bg_img_box">
-        <img src="images/hero-bg2.png" alt="">
+        <img src="images/hero-bg.png" alt="">
       </div>
     </div>
 
@@ -258,8 +258,7 @@
 
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav  ">
-             
-              <li class="nav-item">
+             <li class="nav-item">
                 <a class="nav-link" href="dashboard.html">Dashboard</a>
               </li>
               <li class="nav-item">
@@ -273,6 +272,8 @@
         </nav>
       </div>
     </header>
+    <!-- end header section -->
+  </div>
     <!-- end header section -->
     <!-- slider section -->
     <section class="slider_section">
@@ -306,106 +307,14 @@
   <div class="spinner"></div>
 </div>
 
-  <section class="info_section layout_padding2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-lg-3 info_col">
-          <div class="info_contact">
-            <h4>
-              Address
-            </h4>
-            <div class="contact_link_box">
-              <a href="">
-                <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span>
-                  kolkata
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>
-                  Call +91-0000000000
-                </span>
-              </a>
-              <a href="">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span>
-                  info.b2win@gmail.com
-                </span>
-              </a>
-            </div>
-          </div>
-          <div class="info_social">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-            </a>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 info_col">
-          <div class="info_detail">
-            <h4>
-              Info
-            </h4>
-            <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
-            </p>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-2 mx-auto info_col">
-          <div class="info_link_box">
-            <h4>
-              Links
-            </h4>
-            <div class="info_links">
-              <a class="active" href="index.html">
-                Home
-              </a>
-              <a class="" href="about.html">
-                About
-              </a>
-              <a class="" href="service.html">
-                Services
-              </a>
-              <a class="" href="why.html">
-                Why Us
-              </a>
-              <a class="" href="team.html">
-                Team
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-3 info_col ">
-          <h4>
-            Subscribe
-          </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
-            <button type="submit">
-              Subscribe
-            </button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </section>
-
+  
   <!-- end info section -->
 
   <!-- footer section -->
   <section class="footer_section">
     <div class="container">
       <p>
-        &copy; <span id="displayYear"></span> All Rights Reserved By b2win.ai
+        &copy; <span id="displayYear"></span> All Rights Reserved By B2WIN.AI
       </p>
     </div>
   </section>
@@ -493,29 +402,6 @@ $("#login").show("slow");
 }
 
 
-const checkboxes = document.querySelectorAll('.form-check-input');
-  const minTeams = 6;
-  const maxTeams = 6;
-  const errorMessage = document.querySelector('.form-text');
-
-  // Event listener to validate when checkbox is clicked
-  checkboxes.forEach(checkbox => {
-    checkbox.addEventListener('change', function () {
-      const selectedTeams = document.querySelectorAll('.form-check-input:checked').length;
-
-      // Check if the selected teams are within the limit
-      if (selectedTeams < minTeams) {
-        errorMessage.textContent = `You must select at least ${minTeams} teams.`;
-        errorMessage.style.color = 'red';
-      } else if (selectedTeams > maxTeams) {
-        errorMessage.textContent = `You can select a maximum of ${maxTeams} teams.`;
-        errorMessage.style.color = 'red';
-      } else {
-        errorMessage.textContent = `You can select up to ${maxTeams} teams.`;
-        errorMessage.style.color = 'green';
-      }
-    });
-  });
 
 
 
@@ -528,6 +414,9 @@ const checkboxes = document.querySelectorAll('.form-check-input');
   var contentId;
   var contentName;
   var dateRange;
+  
+
+
   document.addEventListener("DOMContentLoaded", function () {
     // Retrieve the access token and refresh token from local storage
     const accessToken = localStorage.getItem("b2Win_access_token") || "";
@@ -538,7 +427,9 @@ const checkboxes = document.querySelectorAll('.form-check-input');
         console.warn("Tokens are missing. Redirecting to login...");
         window.location.href = "index.html"; // Redirect to login page
     } else {
-      const queryString = window.location.search;
+        console.log("Tokens exist. Proceeding to fetch contests...");
+       
+       const queryString = window.location.search;
 
 // Parse the query string
 const urlParams = new URLSearchParams(queryString);
@@ -555,36 +446,9 @@ $("#tournamentNane").text(contentName);
 $("#tounnamentDate").text(dateRange);
         console.log("Tokens exist. Proceeding to fetch contests...");
         getGroupedTournament();
-        getTournament(); // Call the function to fetch contests
+        getTournament();
     }
 });
-
-function isTokenExpired(token) {
-    try {
-        // Decode the token
-        const payload = JSON.parse(atob(token.split(".")[1].replace(/-/g, "+").replace(/_/g, "/")));
-
-        // Get the current time in seconds
-        const currentTime = Math.floor(Date.now() / 1000);
-
-        // Check if the token is expired
-        return payload.exp < currentTime; // true if expired, false otherwise
-    } catch (error) {
-        console.error("Invalid JWT token:", error.message);
-        return true; // Assume invalid tokens are expired
-    }
-}
-
-
-function logout() {
-  localStorage.removeItem("b2Win_access_token");
-    localStorage.removeItem("b2Win_refresh_token");
-    localStorage.removeItem("b2Win_uid");
-    localStorage.removeItem("b2Win_email");
-    localStorage.removeItem("b2Win_referralCode");
-
-    window.location.href = "index.html";
-}
 
 
 
@@ -660,72 +524,66 @@ function renderCards(data) {
 }
 
 
-
-
 function handleQuestionSubmit(event) {
+    const button = event.target;
+    const questionId = button.getAttribute("data-question-id");
 
-  const accessToken = localStorage.getItem("b2Win_access_token");
-  const button = event.target;
-  const questionId = button.getAttribute("data-question-id");
+    // Find the question text
+    const questionText = document.querySelector(`#question-text-${questionId}`).textContent.trim();
 
-  // Find the question text
-  const questionText = document.querySelector(`#question-text-${questionId}`).textContent.trim();
+    // Find the selected option for the question
+    const selectedOption = document.querySelector(`input[name="question-${questionId}"]:checked`);
 
-  // Find the selected option for the question
-  const selectedOption = document.querySelector(`input[name="question-${questionId}"]:checked`);
+    // Find the betting amount for the question
+    const bettingAmount = document.getElementById(`betting-${questionId}`).value;
 
-  // Find the betting amount for the question
-  const bettingAmount = document.getElementById(`betting-${questionId}`).value;
+    // Input validation
+    if (!selectedOption) {
+        alert(`Please select an answer for Question ${questionId} before submitting.`);
+        return;
+    }
 
-  if (!selectedOption) {
-    alert(`Please select an answer for Question ${questionId} before submitting.`);
-    return;
-  }
+    if (!bettingAmount) {
+        alert(`Please select a betting amount for Question ${questionId} before submitting.`);
+        return;
+    }
 
-  if (!bettingAmount) {
-    alert(`Please select a betting amount for Question ${questionId} before submitting.`);
-    return;
-  }
+    const answer = selectedOption.nextElementSibling.textContent.trim(); // Get the text of the selected option
 
-  const answer = selectedOption.nextElementSibling.textContent.trim(); // Get the text of the selected option
+    const url = "https://test.api.itisiya.com:8443/b2winai/bet/bets/place_contest_question_bet";
 
-  
+    // Show loader
+    showLoader();
 
-  console.log("Token", accessToken);
- 
-  const url="https://test.api.itisiya.com:8443/b2winai/bet/bets/place_contest_question_bet";
-  $.ajax({
-        url: url,
+    // Use the `apiCall` function for the request
+    apiCall({
         method: "POST",
+        url: url,
         contentType: "application/json; charset=UTF-8",
-        headers: {
-          "x-token": accessToken // Retrieve the token from localStorage
-        },
         data: JSON.stringify({
             contest_id: contentId,
-  contest_questions_id: questionId,
-  question: questionText,
-  answer: `["${answer}"]`,
-  bet_point:  parseInt(bettingAmount)
+            contest_questions_id: questionId,
+            question: questionText,
+            answer: `["${answer}"]`,
+            bet_point: parseInt(bettingAmount),
         }),
-        success: function (response) {
-            console.log("response:", response);
-             hideLoader();
-    if (response.statuscode === 200) {    
-     alert(response.message);          
+    })
+        .then(response => {
+            hideLoader(); // Hide loader on success
+            if (response.statuscode === 200) {
+                alert(response.message);
             } else {
-                console.error("failed with status:", response.statuscode, response.message);
+                console.error("Failed with status:", response.statuscode, response.message);
                 alert("Failed: " + response.message);
             }
-        },
-        error: function (xhr, status, error) {
-           hideLoader();
-            console.error("Failed:", xhr.responseText || error);
-            alert("Failed:", xhr.responseText || error);
-        }
-    });
- 
+        })
+        .catch(error => {
+            hideLoader(); // Hide loader on error
+            console.error("Failed:", error.responseText || error);
+            alert("Failed: " + (error.responseText || error));
+        });
 }
+
 
 function getGroupedTournament() {
   const url = "https://test.api.itisiya.com:8443/b2winai/bet/bets/bet/grouped?contest_id="+contentId;
@@ -789,6 +647,7 @@ function getTournament() {
   });
 }
 
+
 function apiCall(options) {
   const accessToken = localStorage.getItem("b2Win_access_token");
 
@@ -848,6 +707,33 @@ if (!refreshToken) {
 }
 
 
+
+function isTokenExpired(token) {
+    try {
+        // Decode the token
+        const payload = JSON.parse(atob(token.split(".")[1].replace(/-/g, "+").replace(/_/g, "/")));
+
+        // Get the current time in seconds
+        const currentTime = Math.floor(Date.now() / 1000);
+
+        // Check if the token is expired
+        return payload.exp < currentTime; // true if expired, false otherwise
+    } catch (error) {
+        console.error("Invalid JWT token:", error.message);
+        return true; // Assume invalid tokens are expired
+    }
+}
+
+
+function logout() {
+  localStorage.removeItem("b2Win_access_token");
+    localStorage.removeItem("b2Win_refresh_token");
+    localStorage.removeItem("b2Win_uid");
+    localStorage.removeItem("b2Win_email");
+    localStorage.removeItem("b2Win_referralCode");
+
+    window.location.href = "index.html";
+}
 
 
 
