get playeeer list

--- a/matchinfo.html
+++ b/matchinfo.html
@@ -420,7 +420,7 @@ $("#login").show("slow");
               
           }
 
-          //getPlayers();
+          getPlayers();
 
          getTeam1Playeer(getTeam1);
       getMatchBettingQuestion();
