--- a/dashboard.html
+++ b/dashboard.html
@@ -65,7 +65,8 @@
 }
 
 .card-img {
-  text-align: center;
+  text-align: center;  
+    background-color: #b0b0e2;
 }
 
 .card-img img {
@@ -122,6 +123,22 @@
 .prediction-link:hover {
   text-decoration: underline;
 }
+.empty-message {
+  text-align: center;
+  margin: 20px 0;
+  color: #555;
+}
+
+.empty-message h3 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.empty-message p {
+  font-size: 1rem;
+  color: #777;
+}
+
 
  #loader {
     position: fixed;
@@ -281,26 +298,35 @@ function renderCards(data) {
   const container = document.getElementById("card-container"); // Parent container for cards
   container.innerHTML = ""; // Clear previous content
 
+  if (data.length === 0) {
+    // Display a message when the list is empty
+    const emptyMessageHtml = `
+      <div class="col-md-6 empty-message">
+        <h3>No tournaments available at the moment.</h3>
+        <p>Check back later for updates!</p>
+      </div>
+    `;
+    container.insertAdjacentHTML("beforeend", emptyMessageHtml);
+    return; // Exit the function, as there's no data to render
+  }
+
   data.forEach(item => {
-    // Replace these values with actual keys from your API response
-    const imageUrl = item.image_url || "images/team_a.jpg"; // Fallback image
-    const title = item.name || "Untitled Contest";
-    const dateRange = `${formatDate(item.start_time) || "N/A"} to ${formatDate(item.end_time) || "N/A"}`;
-    const location = item.description || "Unknown Location";
-    const status = item.status || "ONGOING"; // Example status field
+    // Placeholder for image ID
+    const logoId = `logo-${item.contest_id}`;
+
     // Card HTML
     const cardHtml = `
       <div class="col-md-6 col-lg-4">
         <div class="card card-clickable" onclick="window.location.href='matches.html?content_id=${item.contest_id}&contest_name=${item.name}'">
           <div class="card-img">
-            <img src="${imageUrl}" alt="${title}">
+            <img id="${logoId}" src="images/s1.png" alt="${item.name}"> <!-- Placeholder image -->
           </div>
           <div class="card-content">
-            <span class="badge ${status.toLowerCase()}">${status}</span>
-            <h5 class="title">${title}</h5>
-            <p class="date">${dateRange}</p>
-            <p class="location">${location}</p>
-            <a href="tournamentinfo.html?content_id=${item.contest_id}&content_name=${title}&date=${dateRange}" class="prediction-link btn btn-sm btn-block btn-primary text-white">Tournament Prediction</a>
+            <span class="badge ${item.status?.toLowerCase() || "ongoing"}">${item.status || "ONGOING"}</span>
+            <h5 class="title">${item.name || "Untitled Contest"}</h5>
+            <p class="date">${formatDate(item.start_time) || "N/A"} to ${formatDate(item.end_time) || "N/A"}</p>
+            <p class="location">${item.description || "Unknown Location"}</p>
+            <a href="tournamentinfo.html?content_id=${item.contest_id}&content_name=${item.name}&sdate=${formatDate(item.start_time)}&edate=${formatDate(item.end_time)}" class="prediction-link btn btn-sm btn-block btn-primary text-white">Tournament Prediction</a>
             <a href="tournamentResult.html?content_id=${item.contest_id}" class="prediction-link btn btn-sm btn-block btn-warning text-white">Prediction Result</a>
           </div>
         </div>
@@ -309,8 +335,39 @@ function renderCards(data) {
 
     // Append to container
     container.insertAdjacentHTML("beforeend", cardHtml);
+
+    // Download and set the logo for this contest
+    downloadTeamLogo(item.contest_id, logoId);
   });
 }
+
+function downloadTeamLogo(contestId, imgId) {
+  const url = `https://test.api.itisiya.com:8443/b2winai/item/media/download_single_media_file?contest_id=${contestId}&media_type=png`;
+
+  apiCall({
+    method: "POST",
+    url: url,
+    contentType: "application/json; charset=UTF-8",
+    xhrFields: {
+      responseType: "blob" // Handle binary data
+    },
+  })
+    .then(response => {
+      if (response) {
+        const imageUrl = URL.createObjectURL(response);
+        const imgElement = document.getElementById(imgId);
+        if (imgElement) {
+          imgElement.src = imageUrl; // Update the logo dynamically
+        }
+      } else {
+        console.error("Download failed:", response.statuscode, response.message);
+      }
+    })
+    .catch(error => {
+      console.error("Failed to download image:", error);
+    });
+}
+
 
 function getContest() {
   const url = "https://test.api.itisiya.com:8443/b2winai/item/contest/live_list";
@@ -325,15 +382,12 @@ function getContest() {
     console.log("response:", response);
     if (response.statuscode === 200) {
               const data = response.data; 
-        if (Array.isArray(data) && data.length > 0) {
-          renderCards(data); // Call renderCards with the list of data
-        } else {
-          console.warn("No contests found.");
-        }
-            } else {
-                console.error("failed with status:", response.statuscode, response.message);
-                alert("Failed: " + response.message);
-            }
+        
+       renderCards(data);
+    } else {
+        console.error("failed with status:", response.statuscode, response.message);
+        alert("Failed: " + response.message);
+    }
     // Process response
   }).catch(error => {
     hideLoader();
