--- a/profile.html
+++ b/profile.html
@@ -167,7 +167,7 @@
             <div class="box">
   <!-- Profile Photo Section -->
   <div class="img-box position-relative">
-    <img src="images/team-1.jpg" id="imgPhoto" class="img1" alt="" >
+    <img src="images/w4.png" id="imgPhoto" class="img1" alt="" >
     <input 
   type="file" 
   id="fileInput" 
@@ -205,7 +205,7 @@
 
       <div class="row justify-content-center hidden" id="addProfileBox" style="margin:10px;">
         <div class="col-md-8 offset-md-4 text-end">
-          <button class="btn btn-warning" id="addProfileBTN" onclick="showUpdateForm('add')">Add Profile</button>
+          <button class="btn btn-warning" id="addProfileBTN" onclick="showUpdateForm('add')">Update Profile</button>
         </div>
       </div>
     </div>
@@ -257,7 +257,7 @@
     <input type="hidden" id="updateType" name="">
     <div class="row justify-content-center" style="margin:10px;">
       <div class="col-sm-10 text-end">
-        <button class="btn btn-warning" onclick="addProfile()">Add</button>
+        <button class="btn btn-warning" onclick="addProfile()">Update</button>
       </div>
     </div>
   </div>
@@ -463,6 +463,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
   // Show or hide the divs based on the condition
   if (isWalletEnabled) {
+     getBalance();
     document.getElementById("enableWalletSection").style.display = "none";
     document.getElementById("walletFeatures").style.display = "block";
   } else {
@@ -471,7 +472,7 @@ document.addEventListener("DOMContentLoaded", function () {
   }
         console.log("Tokens exist. Proceeding to fetch contests...");
          getUserInfo();
-        getBalance();
+       
         downloadPhoto();
     }
 });
@@ -678,7 +679,6 @@ function downloadPhoto() {
         .catch(error => {
             hideLoader();
             console.error("Download failed:", error);
-            alert("Failed to download image: " + error);
         });
 }
 
