--- a/tournamentinfo.html
+++ b/tournamentinfo.html
@@ -437,11 +437,12 @@ const urlParams = new URLSearchParams(queryString);
 // Get the content_id from the URL
 const content_id = urlParams.get('content_id');
 const content_name = urlParams.get('content_name');
-const date = urlParams.get('date');
+const sdate = urlParams.get('sdate');
+const edate = urlParams.get('edate');
 
 contentId=content_id;
 contentName=content_name;
-dateRange=date;
+dateRange=`${sdate} - ${edate}`;
 $("#tournamentNane").text(contentName);
 $("#tounnamentDate").text(dateRange);
         console.log("Tokens exist. Proceeding to fetch contests...");
@@ -482,7 +483,7 @@ function renderCards(data) {
     `).join('');
  const bettingDropdownHtml = `
       <div class="mt-3">
-        <label for="betting-${questionId}" class="form-label">Betting Amount:</label>
+        <label for="betting-${questionId}" class="form-label">Amount:</label>
         <select class="form-control" id="betting-${questionId}" name="betting-${questionId}" required>
           <option value="" selected>Select Amount</option>
           <option value="10">10</option>
@@ -631,15 +632,12 @@ function getTournament() {
     console.log("response:", response);
     if (response.statuscode === 200) {
               const data = response.data; 
-        if (Array.isArray(data) && data.length > 0) {
-          renderCards(data); // Call renderCards with the list of data
-        } else {
-          console.warn("No contests found.");
-        }
-            } else {
-                console.error("failed with status:", response.statuscode, response.message);
-                alert("Failed: " + response.message);
-            }
+        
+         renderCards(data);
+    } else {
+        console.error("failed with status:", response.statuscode, response.message);
+        alert("Failed: " + response.message);
+    }
     // Process response
   }).catch(error => {
     hideLoader();
