--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,7 @@
   margin-bottom: 20px;
   display: flex;
   align-items: center;
-  padding: 10px;
+  padding: 10px 0;
   transition: transform 0.3s ease;
 }
 
