--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,7 @@
   margin-bottom: 20px;
   display: flex;
   align-items: center;
-  padding: 10px 0;
+  padding: 0 0 10px 0;
   transition: transform 0.3s ease;
 }
 
@@ -79,6 +79,7 @@
 .card-content {
   flex: 1;
   position: relative;
+  padding-top: 10px;
 }
 
 .badge {
