update profile photo

--- a/profile.html
+++ b/profile.html
@@ -167,7 +167,7 @@
             <div class="box">
   <!-- Profile Photo Section -->
   <div class="img-box position-relative">
-    <img src="images/w4.png" id="imgPhoto" class="img1" alt="" >
+    <img src="images/defaultDP.png" id="imgPhoto" class="img1" alt="" >
     <input 
   type="file" 
   id="fileInput" 
