label change for bet

--- a/tournamentResult.html
+++ b/tournamentResult.html
@@ -481,7 +481,7 @@ contentId=content_id;
 
 
 
-function renderTabContent(tabName, items) {
+/*function renderTabContent(tabName, items) {
     const tabContentContainer = document.getElementById(tabName);
 
     if (!tabContentContainer) {
@@ -516,7 +516,7 @@ function renderTabContent(tabName, items) {
         let listItemHTML = `
           <strong>Question:</strong> ${item.question} <br>
           <strong>Answer:</strong> ${parsedAnswer} <br>
-          <strong>Bet Points:</strong> ${item.bet_point} <br>
+          <strong>Challenge Points:</strong> ${item.bet_point} <br>
         `;
 
         // Add Win Points if the tab is "Won"
@@ -533,7 +533,7 @@ function renderTabContent(tabName, items) {
     } else {
       tabContentContainer.innerHTML = "<p style='margin:20px'>No data available.</p>";
     }
-  }
+  }*/
 
 
 
@@ -606,7 +606,7 @@ function renderTabContent(tabName, items) {
      let listItemHTML = `
         <strong>Question:</strong> ${item.question} <br>
         <strong>Answer:</strong> ${parsedAnswer} <br>
-        <strong>Bet Points:</strong> ${item.bet_point} <br>
+        <strong>Challenge Points:</strong> ${item.bet_point} <br>
         
       `;
 
